# ADOLC.jl

./: .gitignore  ADOLC-Locations_1.tap  ADOLC-Operations_1.tap  LICENSE  Manifest.toml  Project.toml  README.md  build.jl  run_test.sh
.github/workflows/: ci.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: citations.bib  index.md
examples/: Manifest.toml  Project.toml  abs_normal.jl  benchmark.jl  demo_first_order.jl  demo_higher_order.jl  demo_low_level.jl  demo_reuse_tape.jl  demo_sec_order.jl  example_branch_switch.jl  example_mifflin.jl  examples.jl  forward_reverse.jl  fwd_vs_rvs.jl  gradient.jl  sppk.jl  test.jl
examples/benchmark/: benchmark_examples.jl  fwd_vs_rvs.jl  higher_order.jl  uni_tpp.jl
examples/runtime/: fwd_vs_rvs.jl  higher_order.jl
find_julia/: CMakeLists.txt  FindJulia.cmake
src/: ADOLC.jl  ADOLC_wrap.jl  Adouble.jl  AdoubleModule.cpp  AdoubleModule.jl  CMakeLists.txt  CppHello.jl  TODO  TadoubleModule.jl  TbadoubleModule.jl  TlAdouble.jl  TladoubleModule.cpp  TladoubleModule.jl  abs_normal.jl  adolc_interface.cpp  arithmetics.jl  array_types.cpp  array_types.jl  build.jl  derivative.jl  local_test.jl  ops.jl  tape_handling.jl  test.jl  tl_adolc_interface.cpp  tladolc_interface.cpp  univariate_tpp.jl  utils.jl
src/examples/: gradient.jl
test/: Project.toml  arithmetics.jl  runtests.jl  test_abs_normal.jl  test_active.jl  test_adouble.jl  test_arithmetics.jl  test_array_types.jl  test_derivative!.jl  test_derivative.jl  test_gradient.jl  test_reuse_tape.jl  test_reverse.jl  test_taylor_coeff.jl  test_tensor_eval.jl  test_univariate_tpp.jl
test/abs_normal/: test_derivative!.jl  test_derivative.jl
test/first_order/: test_derivative!.jl  test_derivative.jl  test_function_and_derivative_value!.jl
test/higher_order/: test_derivative!.jl  (+1 more)
tests/: test_abs_normal.jl  test_gradient.jl  test_gradient_split.jl  test_reverse.jl  test_taylor_coeff.jl  test_tensor_eval.jl  test_tladouble_arithmetics.jl
v1.1.0/: .documenter-siteinfo.json  citations.bib  index.html  search_index.js
v1.2.0/: .documenter-siteinfo.json  index.html
v1.2.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v1.2.1-docs1/: .documenter-siteinfo.json  index.html  objects.inv  siteinfo.js
v1.3.0/: .documenter-siteinfo.json  index.html
(+55 files in other folders)
